--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
             <article id="three" class=" post grid-item3"></article>
 
             <div id="login" class="post2 grid-item4">
-                <h4>Sign up</h4>
+                <h4 id="sign_up">Sign up</h4>
                     <form>
                         <label for="name">
                             Name
                         </label>
-                        <input type="text" name="name" placeholder="Jack Stevens">
+                        <input type="text" name="name" placeholder="Jack Stevens" id="form_name">
 
                         <label for="email">
                             E-mail
@@ -96,7 +96,7 @@
                         <label for="password">
                             Password
                         </label>
-                        <input type="text" name="password">
+                        <input type="password" name="password">
 
                         <input  class="button-submit" type="submit" value="Sign in">
 
